--- a/index.html
+++ b/index.html
@@ -226,8 +226,8 @@
     </footer>
 
 
-    <script src="./modernizer.js"></script>
-    <script src="./index.js"></script>
+    <script src="./modernizer.js" defer></script>
+    <script src="./index.js" defer></script>
     <script src="https://kit.fontawesome.com/648135cc3c.js" crossorigin="anonymous"></script>
 </body>
 </html>
